# Makefile.am - Makefile template, integration component, for Letterfall
# Copyright (C) 2012 Alan Manuel K. Gloria
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without warranty of any kind.

include $(srcdir)/Makefile.top
include $(srcdir)/Makefile.bot
